# Leady

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/leadbot/: __init__.py  __main__.py  cli.py  config.py
backend/leadbot/api/: __init__.py  app.py  dependencies.py
backend/leadbot/db/: __init__.py  models.py  queries.py  schema.py  session.py
backend/leadbot/discovery/: __init__.py  filters.py  geo.py  orchestrator.py  stage.py
backend/leadbot/enrichment/: __init__.py  crawler.py  domain.py  email_extractor.py  one_liner.py  pipeline.py
backend/leadbot/exports/: __init__.py  csv_export.py  csv_exporter.py  google_sheets.py
backend/leadbot/jobs/: __init__.py  discovery_pipeline_job.py
backend/leadbot/mcp/: __init__.py  middleware.py  server.py  tools.py
backend/leadbot/pipeline/: orchestrator.py
backend/leadbot/scoring/: __init__.py  categorizer.py  classifier.py  engine.py  scorer.py  stage.py
backend/leadbot/sources/: __init__.py  base.py  funding_news.py  github_signals.py  hiring_signals.py
backend/tests/: conftest.py  test_api_auth.py  test_api_companies.py  test_api_routes_misc.py  test_categorizer.py  test_classifier.py  test_cli.py  test_db.py  test_dedup.py  test_discovery_orchestrator.py  test_discovery_pipeline_job.py  test_domain.py  test_email_extractor.py  test_exports.py  test_github_orgs_provider.py  test_mcp_tools.py  test_scorer.py  test_smoke_imports.py  test_sources_smoke.py  test_stage_inference.py
(+68 files in other folders)
