[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leadbot"
version = "0.1.0"
description = "Lead discovery and scoring backend for Leady."
readme = "../README.md"
requires-python = ">=3.11"
authors = [{ name = "Leady" }]
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "requests>=2.32,<3.0",
  "typer>=0.12,<1.0",
  "authy>=0.1.0,<0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<6.0",
  "mypy>=1.11,<2.0",
  "ruff>=0.6,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped", "arg-type", "call-overload"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = '-q -m "not network" --cov=leadbot --cov-report=term-missing'
markers = [
  "network: tests that require live network access (opt-in)",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["leadbot"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
